--- a/scenarioTfr/weather/lightning/index_e.html
+++ b/scenarioTfr/weather/lightning/index_e.html
@@ -1,53 +1,61 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="fr" dir="ltr">
+<html class="no-js" lang="en" dir="ltr">
 <!--<![endif]--><head>
 		<meta charset="utf-8" />
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 		wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
-		<meta name="dcterms.creator" content="Environnement Canada" />
-		<meta name="dcterms.language" title="ISO639-2" content="fra" />
+		<meta name="dcterms.creator" content="Environment Canada" />
+		<meta name="dcterms.language" title="ISO639-2" content="eng" />
 <title>Carte canadienne du risque de foudre  - Canada - Environment Canada</title>
 <meta name="dcterms.title" content="Carte canadienne du risque de foudre  - Canada - Environnement Canada" />
 <meta name="description" content="Carte montrant l'évolution de la foudre au cours de la dernière heure" />
 <meta name="dcterms.subject" title="scheme" content="Foudre; Télédétection;" />
 <meta name="dcterms.issued" title="W3CDTF" content="2013-04-16" />
 <meta name="dcterms.modified" title="W3CDTF" content="2017-09-07" />
-
 		<!-- Meta data-->
 		<!--[if gte IE 9 | !IE ]><!-->
-<link href="../template/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
-<link rel="stylesheet" href="../template/GCWeb/css/theme.min.css" />
+<link href="../template/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="../template/GCWeb/css/theme.min.css">
+
+
 <!--<![endif]-->
 
-<!--[if lt IE 9]>
-<link href="../template/GCWeb/assets/favicon.ico" rel="shortcut icon" />
-
+<!--[if lt IE 9]> -->
 <link rel="stylesheet" href="../template/GCWeb/css/ie8-wet-boew.min.css" />
-<link rel="stylesheet" href="../template/wxo/css/wxo-ie8.css"/> <!-- missing -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="../template/GCWeb/js/ie8-wet-boew.min.js"></script>
+<link href="../GCWeb/assets/favicon.ico" rel="shortcut icon" />
+<link rel="stylesheet" href="../GCWeb/css/ie8-theme.min.css" />
+<link rel="stylesheet" href="../cacheable/css/city/jquery-ui-1.10.3.custom.min.css">
+<script src="../wet-boew/js/ie8-wet-boew.min.js"></script>
+
+
 <![endif]-->
 <!--[if lte IE 9]>
-
 <![endif]-->
 
-<noscript><link rel="stylesheet" href="../template/GCWeb/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
 <link rel="stylesheet" href="../cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
 <link rel="stylesheet" href="../template/wxo/css/wxo.css" />
-<!--[if lte IE 8]>
-<link rel="stylesheet" href="../cacheable/css/wxo-carousel/wxo-carousel-ie8.css"/>
+<!-- <link rel="stylesheet" href="/template/wxo/css/wxo.css" /> -->
+<!--[if IE 8]>
+<link href="../cacheable/css/radar/radar2.css" rel="stylesheet" type="text/css" />
 <![endif]-->
-<link rel="stylesheet" href="../cacheable/css/wxo-carousel/wxo-carousel.css"/>
-<link rel="stylesheet" type="text/css" href="../css/lightning.css"> 
-<style>
+<script type="text/javascript" src="../cacheable/css/wxo-carousel/wxo-carousel-ie8.css"></script>
 
-</style>
+
+<link rel="stylesheet" href="../cacheable/css/wxo-carousel/wxo-carousel.css" />
+<link rel="stylesheet" href="../css/lightning.css" />
+
+<script>
+	if (typeof composite_cities_active === 'undefined'){
+		var composite_cities_active = 'yes';
+	}
+</script>  
 </head>
 <body class="secondary" vocab="http://schema.org/" typeof="WebPage">
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
@@ -60,59 +68,64 @@
 		<a class="wb-sl" href="#wb-cont">Passer au contenu principal</a>
 	</li>
 	<li class="wb-slc visible-sm visible-md visible-lg">
-		<a class="wb-sl" href="#wb-info">Passer à «&#160;À propos de ce site&#160;»</a>
+		<a class="wb-sl" href="#wb-info">Passer à «&#160;À propos de ce site&#160;</a>
 	</li>
 </ul>
 <header role="banner">
 	<div id="wb-bnr" class="container">
+
 		<section id="wb-lng" class="visible-md visible-lg text-right">
 			<h2 class="wb-inv">Sélection de la langue</h2>
 			<div class="row">
 	<div class="col-md-12">
 		<ul class="list-inline margin-bottom-none">
-			<li><a lang="en" href="/include/lang.php">English</a></li>
+			<li><a lang="fr" href="/include/lang.php">English</a></li>
 		</ul>
 	</div>
 </div>
+
 		</section>
 
 <div class="row">
 			
 	<div class="brand col-xs-8 col-sm-9 col-md-6">
-		<a href="https://www.canada.ca/fr.html"><object type="image/svg+xml" tabindex="-1" data="../../weather/template/GCWeb/assets/sig-blk-fr.svg"></object><span class="wb-inv"> Gouvernement du Canada / <span lang="en">Government of Canada</span></span></a>
+		<a href="http://www.canada.ca/en/index.html"><object type="image/svg+xml" tabindex="-1" data="../GCWeb/assets/sig-blk-fr.svg"></object><span class="wb-inv"> Gouvernement du Canada</span></a>
 	</div>
 
 	<section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn" >
-            <h2>Recherche et menus</h2>
-            <ul class="list-inline text-right chvrn">
-   <li><a href="#mb-pnl" title="Recherche et menus" aria-controls="mb-pnl" class="overlay-lnk" role="button"><span class="glyphicon glyphicon-search"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">Recherche et menus</span></span></span></a></li>
+				<h2>Recherche et menus</h2>
+				<ul class="list-inline text-right chvrn">
+	<li><a href="#mb-pnl" title="Search and menus" aria-controls="mb-pnl" class="overlay-lnk" role="button"><span class="glyphicon glyphicon-search"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">Recherche et menus<</span></span></span></a></li>
 </ul>
 <div id="mb-pnl"></div>
-         </section>
-         <section id="wb-srch" class="col-xs-6 text-right visible-md visible-lg">
-            <h2>Recherche</h2>
-            <form action="http://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" name="cse-search-box" role="search" class="form-inline">
-   <div class="form-group">
-      <label for="wb-srch-q" class="wb-inv">Recherchez le site Web</label>
-      <input name="cdn" value="canada" type="hidden"/>
-      <input name="st" value="s" type="hidden"/>
-      <input name="num" value="10" type="hidden"/>
-      <input name="langs" value="fra" type="hidden"/>
-      <input name="st1rt" value="0" type="hidden">
-      <input name="s5bm3ts21rch" value="x" type="hidden"/>
-      <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Rechercher dans Canada.ca" />
-      <datalist id="wb-srch-q-ac">
-         <!--[if lte IE 9]><select><![endif]-->
-         <!--[if lte IE 9]></select><![endif]-->
-      </datalist>
-   </div>
-   <div class="form-group submit">
-      <button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub"><span class="glyphicon-search glyphicon"></span><span class="wb-inv">Recherche</span></button>
-   </div>
+
+			</section>
+
+
+			<section id="wb-srch" class="col-xs-6 text-right visible-md visible-lg">
+				<h2>Recherche</h2>
+				<form action="http://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" name="cse-search-box" role="search" class="form-inline">
+	<div class="form-group">
+		<label for="wb-srch-q" class="wb-inv">Recherchez le site Web</label>
+		<input name="cdn" value="canada" type="hidden"/>
+		<input name="st" value="s" type="hidden"/>
+		<input name="num" value="10" type="hidden"/>
+		<input name="langs" value="eng" type="hidden"/>
+		<input name="st1rt" value="0" type="hidden">
+		<input name="s5bm3ts21rch" value="x" type="hidden"/>
+		<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Rechercher dans Canada.ca" />
+		<datalist id="wb-srch-q-ac">
+			<!--[if lte IE 9]><select><![endif]-->
+			<!--[if lte IE 9]></select><![endif]-->
+		</datalist>
+	</div>
+	<div class="form-group submit">
+		<button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub"><span class="glyphicon-search glyphicon"></span><span class="wb-inv">Recherche</span></button>
+	</div>
 </form>
-         </section>
-</div>
-</div>
+			</section>
+		</div>
+	</div>
 <nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="/data/pco-fetch/sitemenu-fr.html" typeof="SiteNavigationElement">
 <div class="container nvbar">
 	<h2>Menu des sujets</h2>
@@ -129,20 +142,23 @@
         </ul>
     </div>
 </div>
-</nav>
+	</nav>
+
 <nav role="navigation" id="wb-bc" class="" property="breadcrumb">
-	<h2>Vous êtes ici :</h2>
-	<div class="container">
+		<h2>Vous êtes ici :</h2>
+		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="../../weather/en.html">Accueil</a></li><li><a href="../../weather/services/environment.html">Environnement et ressources naturelles</a></li>
-<li><a href="../../weather/canada_e.html">Information météo</a></li>
-<li><a href="../../weather/mainmenu/alert_menu_e.html">Alertes</a></li>
+<li><a href="../en.html">Accueil</a></li><li><a href="../services/environment.html">Environnement et ressources naturelles</a></li>
+<li><a href="../index_e.html">Information météo</a></li>
+<li><a href="../mainmenu/weather_menu_e.html">Météo</a></li>
+<li><a href="../radar/index_e.html">Radar</a></li>
 		</ol>
 	</div>
 </div>
 	</nav>
 </header>
+
 
 <div class="container hidden-print">
 
@@ -189,7 +205,7 @@
 	</div>
 </section>
 </div>
-	
+
 <div class="clearfix"></div>
 <div id='collapsible-alerts' class='container'></div>
 <div class="clearfix"></div>
