--- a/ut-fr.html
+++ b/ut-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Usability links - Weather</title>
+		<title>Liens Météo</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -28,7 +28,7 @@
 				lngLinks: [{
 					lang: "fr",
 					href: "transactional-fr.shtml",
-					text: "Français"
+					text: "English"
 				}],
 				breadcrumbs: [{
 					title: "Home",
@@ -41,7 +41,7 @@
 </script>
 
 <main role="main" property="mainContentOfPage" class="container">
-<h1 property="name" id="wb-cont" class="h2">Météo</h1>
+<h1 property="name" id="wb-cont" class="h2">Liens Météo</h1>
 <section>
 
 <ul class="lst-spcd">
