--- a/scenarioTfr/weather/radar/index_e.html
+++ b/scenarioTfr/weather/radar/index_e.html
@@ -797,7 +797,21 @@
 
 </main>
 
-   </nav>
+  <footer role="contentinfo" id="wb-info">
+   <nav role="navigation" class="container wb-navcurr">
+     <h2 class="wb-inv">Au sujet du gouvernement</h2>
+<ul class="list-unstyled colcount-sm-2 colcount-md-3">
+<li><a href="/mainmenu/contact_us_f.html">Contactez-nous</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
+<li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
+<li><a href="http://pm.gc.ca/fra">Premier ministre</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">Comment le gouvernement fonctionne</a></li>
+<li><a href="http://ouvert.canada.ca/">Gouvernement ouvert</a></li>
+</ul>
+</nav>
    <div class="brand">
    <div class="container">
       <div class="row ">
@@ -816,7 +830,7 @@
             <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
          </div>
          <div class="col-xs-6 col-md-2 text-right">
-            <object type="image/svg+xml" tabindex="-1" role="img" data="../template/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+            <object type="image/svg+xml" tabindex="-1" role="img" data="../../weather/template/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
          </div>
       </div>
    </div>
