--- a/scenarioSfr/weather/warnings/ottawa-report_e.html
+++ b/scenarioSfr/weather/warnings/ottawa-report_e.html
@@ -100,7 +100,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
          </section>
 </div>
 </div>
-<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="/data/pco-fetch/sitemenu-fr.html" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="../../ajax/sitemenu-fr.html" typeof="SiteNavigationElement">
 <div class="container nvbar">
 	<h2>Menu des sujets</h2>
     <div class="row">
@@ -227,17 +227,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <footer role="contentinfo" id="wb-info">
 <nav role="navigation" class="container wb-navcurr">
-<h2 class="wb-inv">About government</h2>
+<h2 class="wb-inv">Au sujet du gouvernement</h2>
 <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-<li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
-<li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
-<li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
-<li><a href="http://news.gc.ca/">News</a></li>
-<li><a href="https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
-<li><a href="https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
-<li><a href="http://pm.gc.ca/eng">Prime Minister</a></li>
-<li><a href="https://www.canada.ca/en/government/system.html">How government works</a></li>
-<li><a href="http://open.canada.ca/en/">Open government</a></li>
+<li><a href="/mainmenu/contact_us_f.html">Contactez-nous</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
+<li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
+<li><a href="http://pm.gc.ca/fra">Premier ministre</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">Comment le gouvernement fonctionne</a></li>
+<li><a href="http://ouvert.canada.ca/">Gouvernement ouvert</a></li>
 </ul>
 </nav>
 <div class="brand">
