--- a/scenarioTfr/weather/past_conditions/index_e.html
+++ b/scenarioTfr/weather/past_conditions/index_e.html
@@ -93,7 +93,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </div>
 
-<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="../../ajax/sitemenu-fr.html" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="../../../ajax/sitemenu-fr.html" typeof="SiteNavigationElement">
 <div class="container nvbar">
 	<h2>Menu des sujets</h2>
     <div class="row">
