--- a/scenarioS/weather/warnings/ottawa-report_e.html
+++ b/scenarioS/weather/warnings/ottawa-report_e.html
@@ -178,11 +178,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
     <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">10:00 AM EST 1 January 2017</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
 <ul> <li>Ottawa</li> </ul>
- <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 10 to 15 cm is expected.<br/>
+ <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Strong winds combined with snow will reduce visibilities beginning Sunday around noon.<br/>
 
 	<br/>Total snowfall amounts near 15 cm are forecast, with snow beginning around noon and continuing through the night. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday night before tapering off Monday morning.<br/>
 
 <br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/>
+	 
+	 <br>Blowing snow advisories are issued when winds are expected to create blowing snow giving poor visibility to 800 metres or less for at least 3 hours.</br>
 
 <br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com <br/>
 
