--- a/scenarioSfr/weather/warnings/ottawa-report_e.html
+++ b/scenarioSfr/weather/warnings/ottawa-report_e.html
@@ -192,11 +192,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
     <h2>Bulletins</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">10h00 HAE le dimanche 1 janvier 2017</span><br/> <strong>Avis de poudrerie :</strong> </p> 
 <ul> <li>Ottawa</li> </ul>
- <p>AVIS DE POUDRERIE EN VIGUEUR POUR LA RÉGION D’OTTAWA.<br/><br/>Des accumulations totales de neige de 10 à 15 cm sont attendues.<br/>
+ <p>AVIS DE POUDRERIE EN VIGUEUR POUR LA RÉGION D’OTTAWA.<br/><br/>Les vents forts combines a la neige reduiront les visibilites a compter de dimanche vers midi.<br/>
 
 	<br/>On prévoit des accumulations totales de neige de près 15 cm. Les précipitations de neige devraient commencer vers midi et se poursuivre jusque dans la nuit. Dans certains secteurs, la neige devrait se transformer en grésil et en pluie verglaçante, ou se mélanger à ceux-ci, le dimanche soir, puis s’affaiblir le lundi matin.<br/>
 
 <br/>Soyez prêt à adapter votre conduite aux conditions routières changeantes. Les accumulations de neige pourraient rendre les déplacements difficiles à certains endroits.<br/>
+	 
+	 <br>Des avis de poudrerie sont emis lorsqu'on prevoit que les vents occasionneront de la poudrerie qui reduira la visibilite a 800 metres ou moins pendant au moins 3 heures.</br>
 
 <br/>Veuillez continuer à surveiller les alertes et les prévisions émises par Environnement Canada. Pour signaler du temps violent, envoyez un courriel à ec.weathernlwo.ec@canada.com.<br/>
 
