--- a/scenarioSfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioSfr/weather/forecast/hourly/on-118_metric_e.html
@@ -199,7 +199,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </colgroup>
     <thead>
       <tr>
-        <th id="header1" class="wxo-tb-head">Date/Heure<br/>(<abbr title="Eastern Standard Time">HAE</abbr>)</th>
+        <th id="header1" class="wxo-tb-head">Date/Heure<br/>(<abbr title="Eastern Standard Time">HNE</abbr>)</th>
         <th id="header2" class="wxo-tb-head">
           <abbr title="Temperature">Temp</abbr>
           <br/>(<abbr title="degrees Celsius">&deg;C</abbr>)</th>
@@ -216,12 +216,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </thead>
     <tbody>
       <tr>
-        <th class="wxo-th-bkg" colspan="6"></th>
+        <th class="wxo-th-bkg" colspan="6"> 01 janvier 2017</th>
       </tr>
-	   <tr>
-	       <tr>
-        <th class="wxo-th-bkg" colspan="5">01 janvier 2017</th>
-      </tr>
+	  
       <tr>
       <tr>
         <td headers="header1" class="text-center">15:00</td>
@@ -340,6 +337,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 									rafales 50</td>
         <td headers="header7" class="text-center">-14</td>
       </tr>
+	     <tr>
+        <th class="wxo-th-bkg" colspan="5">02 janvier 2017</th>
+      </tr>
       <tr>
         <td headers="header1" class="text-center">00:00</td>
         <td headers="header2" class="text-center">-6</td>
@@ -353,12 +353,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 									rafales 50</td>
         <td headers="header7" class="text-center">-14</td>
       </tr>
-	   <tr>
-        <th class="wxo-th-bkg" colspan="5">02 janvier 2017</th>
-      </tr>
+
       <tr>
          <tr>
-        <td headers="header1" class="text-center">1:00</td>
+        <td headers="header1" class="text-center">01:00</td>
         <td headers="header2" class="text-center">-4</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Neige"/></span><div class="media-body">
             <p>Neige</p>
@@ -372,7 +370,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">2:00</td>
+        <td headers="header1" class="text-center">02:00</td>
         <td headers="header2" class="text-center">-4</td>
          <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Neige"/></span><div class="media-body">
             <p>Neige</p>
@@ -386,7 +384,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">3:00</td>
+        <td headers="header1" class="text-center">03:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Neige"/></span><div class="media-body">
             <p>Neige</p>
@@ -400,7 +398,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">4:00</td>
+        <td headers="header1" class="text-center">04:00</td>
         <td headers="header2" class="text-center">-1</td>
          <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Neige"/></span><div class="media-body">
             <p>Neige</p>
@@ -413,7 +411,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header7" class="text-center">-1</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">5:00</td>
+        <td headers="header1" class="text-center">05:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
             <p>Neige faible</p>
@@ -426,7 +424,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header7" class="text-center">-6</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">6:00</td>
+        <td headers="header1" class="text-center">06:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
             <p>Neige faible</p>
@@ -439,7 +437,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header7" class="text-center">-6</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">7:00</td>
+        <td headers="header1" class="text-center">07:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
             <p>Neige faible</p>
@@ -452,7 +450,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header7" class="text-center">-6</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">8:00</td>
+        <td headers="header1" class="text-center">08:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
             <p>Neige faible</p>
@@ -465,7 +463,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header7" class="text-center">-6</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">9:00</td>
+        <td headers="header1" class="text-center">09:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
             <p>Neige faible</p>
@@ -518,6 +516,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       <tr>
         <td headers="header1" class="text-center">13:00</td>
+        <td headers="header2" class="text-center">-1</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
+            <p>Neige faible</p>
+          </div>
+        </td>
+        <td headers="header4" class="text-center">Élevée</td>
+       <td headers="header5" class="text-center">
+          <abbr title="East">E</abbr> 15<br/>
+        </td>
+        <td headers="header7" class="text-center">-6</td>
+      </tr>
+	  <tr>
+        <td headers="header1" class="text-center">14:00</td>
         <td headers="header2" class="text-center">-1</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/16.png" alt="Neige faible"/></span><div class="media-body">
             <p>Neige faible</p>
