--- a/scenarioSfr/weather/past_conditions/index_e.html
+++ b/scenarioSfr/weather/past_conditions/index_e.html
@@ -233,7 +233,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <table id="past24Table" class="table table-striped table-hover table-condensed">
         <thead>
           <tr>
-            <th id="header1" class="wxo-tb-head vertical-center">Date / Heure<br />(<abbr title="Eastern Daylight Time">HAE</abbr>)</th>
+            <th id="header1" class="wxo-tb-head vertical-center">Date / Heure<br />(<abbr title="Eastern Daylight Time">HNE</abbr>)</th>
             <th id="header2" class="wxo-tb-head vertical-center" style="min-width:150px;">Conditions</th>
             <th id="header3m" class="wxo-tb-head wxo-metric metricData vertical-center">
               <abbr title="Temperature">Température </abbr>
