time zone indicator

--- a/scenarioTfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioTfr/weather/forecast/hourly/on-118_metric_e.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Weather Information - Environment Canada</title>
+<title>Ottawa (Kanata - Orléans), ON - Prévisions pour les prochaines 24 heures - Environnement Canada</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data -->
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -194,7 +194,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </colgroup>
     <thead>
       <tr>
-        <th id="header1" class="wxo-tb-head">Date/Heure<br />(<abbr title="Eastern Daylight Time">HAE</abbr>)</th>
+        <th id="header1" class="wxo-tb-head">Date/Heure<br />(<abbr title="Eastern Daylight Time">HNE</abbr>)</th>
         <th id="header2" class="wxo-tb-head">
           <abbr title="Temperature">Temp</abbr>
           <br />(<abbr title="degrees Celsius">&deg;C</abbr>)</th>
@@ -407,7 +407,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header5" class="text-center">
           <abbr title="Southwest">S</abbr> 20<br />
         </td>
-      </tr>
+      </tr><!--
+      <tr>
+        <th class="wxo-th-bkg" colspan="6">25 août 2017</th>
+      </tr> -->
       <tr>
         <td headers="header1" class="text-center">00:00</td>
         <td headers="header2" class="text-center">15</td>
