time zone in FR

--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -191,7 +191,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section>
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading">
-          <h2>Conditions actuelles<span class="small visible-print-inline-block pull-right">Enregistrées à : Aéroport int. Macdonald-Cartier d'Ottawa  7h00 HAE le jeudi 24 août 2017</span></h2>
+          <h2>Conditions actuelles<span class="small visible-print-inline-block pull-right">Enregistrées à : Aéroport int. Macdonald-Cartier d'Ottawa  7h00 HNE le jeudi 24 août 2017</span></h2>
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
@@ -237,7 +237,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <dt>Enregistrées à :</dt>
               <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
               <dt>Date : </dt>
-              <dd class="mrgn-bttm-0">7h00 HAE le jeudi 24 août 2017</dd>
+              <dd class="mrgn-bttm-0">7h00 HNE le jeudi 24 août 2017</dd>
             </dl>
             <div class="row no-gutters wb-eqht brdr-tp">
               <div class="col-sm-4 brdr-rght-city">
@@ -415,7 +415,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <dt>Enregistrées à :</dt>
             <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
             <dt>Date : </dt>
-            <dd class="mrgn-bttm-0">7h00 HAE le jeudi 24 août 2017</dd>
+            <dd class="mrgn-bttm-0">7h00 HNE le jeudi 24 août 2017</dd>
           </dl>
           <dl class="dl-horizontal wxo-conds-xs ">
             <dt>Condition :</dt>
@@ -460,7 +460,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section class="hidden-xs mrgn-tp-lg">
       <details class="panel panel-default wxo-fcst" open="open">
         <summary class="panel-heading">
-          <h2>Prévisions<span class="small visible-print-inline-block pull-right">Émises à : 5h00 HAE le jeudi 24 août 2017</span></h2>
+          <h2>Prévisions<span class="small visible-print-inline-block pull-right">Émises à : 5h00 HNE le jeudi 24 août 2017</span></h2>
         </summary>
         <ul class="hidden-print pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li class="brdr-rght">
@@ -647,7 +647,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <section>
           <details open="open" class="wxo-detailedfore">
             <summary class="blackfont hidden-print">
-              <h3 class="h5"><span class="wb-inv">Prévisions 24 heures</span>Émises à : 5h00 HAE le jeudi 24 août 2017</h3>
+              <h3 class="h5"><span class="wb-inv">Prévisions 24 heures</span>Émises à : 5h00 HNE le jeudi 24 août 2017</h3>
             </summary>
             <table class="table mrgn-bttm-md mrgn-tp-md textforecast">
               <thead>
@@ -749,9 +749,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <td>
               <abbr title="Maximum">Max</abbr> <span class="wxo-metric-hide" title="max">27&deg;<abbr title="Celsius">C</abbr>.</span><span class="wxo-imperial-hide wxo-city-hidden" title="max">81&deg;<abbr title="Fahrenheit">F</abbr>.</span>  <abbr title="Minimum">Min</abbr> <span class="wxo-metric-hide" title="min">16&deg;<abbr title="Celsius">C</abbr>.</span><span class="wxo-imperial-hide wxo-city-hidden" title="min">61&deg;<abbr title="Fahrenheit">F</abbr>.</span></td>
             <th scope="row">Lever</th>
-            <td>5:35 HAE</td>
+            <td>5:35 HNE</td>
             <th scope="row">Coucher</th>
-            <td>20:43 HAE</td>
+            <td>20:43 HNE</td>
           </tr>
         </table>
       </details>
@@ -759,10 +759,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section class="mrgn-tp-lg visible-xs">
       <details class="panel panel-default wxo-fcst" open="open">
         <summary class="panel-heading">
-          <h2>Prévisions<span class="small visible-print-inline-block pull-right">Émises à : 5h00 HAE le jeudi 24 août 2017</span></h2>
+          <h2>Prévisions<span class="small visible-print-inline-block pull-right">Émises à : 5h00 HNE le jeudi 24 août 2017</span></h2>
         </summary>
         <section>
-          <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv">Prévisions 24 heures</span>Émises à : 5h00 HAE le jeudi 24 août 2017</h3>
+          <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv">Prévisions 24 heures</span>Émises à : 5h00 HNE le jeudi 24 août 2017</h3>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/09.gif" alt="Pluie intermittente ou orages" class="pull-right" title="Pluie intermittente ou orages"></div>
             <div class="col-xs-6">
@@ -902,9 +902,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <dd>
               <abbr title="Maximum">Max</abbr> <span class="wxo-metric-hide" title="max">27&deg;<abbr title="Celsius">C</abbr>.</span><span class="wxo-imperial-hide wxo-city-hidden" title="max">81&deg;<abbr title="Fahrenheit">F</abbr>.</span>  <abbr title="Minimum">Min</abbr> <span class="wxo-metric-hide" title="min">16&deg;<abbr title="Celsius">C</abbr>.</span><span class="wxo-imperial-hide wxo-city-hidden" title="min">61&deg;<abbr title="Fahrenheit">F</abbr>.</span></dd>
             <dt>Lever : </dt>
-            <dd>5:35 HAE</dd>
+            <dd>5:35 HNE</dd>
             <dt>Coucher : </dt>
-            <dd>20:43 HAE</dd>
+            <dd>20:43 HNE</dd>
           </dl>
         </div>
       </details>
