--- a/scenarioAfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioAfr/weather/city/pages/on-118_metric_e.html
@@ -207,7 +207,7 @@
     <section>
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading">
-          <h2>Conditions actuelles<span class="small visible-print-inline-block pull-right">Enregistrées à : Aéroport int. Macdonald-Cartier d'Ottawa  3h30 PM HAE le mardi septembere 2017</span></h2>
+          <h2>Conditions actuelles<span class="small visible-print-inline-block pull-right">Enregistrées à : Aéroport int. Macdonald-Cartier d'Ottawa  15h30 HAE le mardi 5 septembre 2017</span></h2>
         </summary>
     <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
@@ -254,7 +254,7 @@
               <dt> Enregistrées à :</dt>
               <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
               <dt>Date: </dt>
-              <dd class="mrgn-bttm-0">3h30 PM HAE le mardi septembere 2017</dd>
+              <dd class="mrgn-bttm-0">15h30 HAE le mardi 5 septembre 2017</dd>
             </dl>
            
             <div class="row no-gutters wb-eqht brdr-tp">
@@ -436,7 +436,7 @@
             <dt>Enregistrées à :</dt>
             <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
             <dt>Date: </dt>
-            <dd class="mrgn-bttm-0">3h30 PM HAE le mardi septembere 2017</dd>
+            <dd class="mrgn-bttm-0">15h30 HAE le mardi 5 septembre 2017</dd>
           </dl>
           <dl class="dl-horizontal wxo-conds-xs ">
             <dt>Condition :</dt>
@@ -504,7 +504,7 @@
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
               <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
-                <strong title="mardi">mar</strong>
+                <strong title="mardi">Mar</strong>
                 <br>5 <abbr title="September">sep</abbr>
               </a>
             </div>
@@ -526,7 +526,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="mercredi">mer</strong>
+              <strong title="mercredi">Mer</strong>
               <br>6 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/02.gif" alt="Alternance de soleil et de nuages" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
@@ -547,7 +547,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="jeudi">jeu</strong>
+              <strong title="jeudi">Jeu</strong>
               <br>7 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Possibilité d'averses" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
@@ -572,7 +572,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="vendredi">ven</strong>
+              <strong title="vendredi">Ven</strong>
               <br>8 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Possibilité d'averses" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
@@ -597,7 +597,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="samedi">sam</strong>
+              <strong title="samedi">Sam</strong>
               <br>9 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Possibilité d'averses" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
@@ -622,7 +622,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="dimanche">dim</strong>
+              <strong title="dimanche">Dim</strong>
               <br>10 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Pluie" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">16&deg;<abbr title="Celsius">C</abbr>
@@ -643,7 +643,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="lundi">lun</strong>
+              <strong title="lundi">Lun</strong>
               <br>11 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Pluie" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">15&deg;<abbr title="Celsius">C</abbr>
