--- a/scenarioAfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioAfr/weather/forecast/hourly/on-118_metric_e.html
@@ -194,7 +194,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </colgroup>
     <thead>
       <tr>
-        <th id="header1" class="wxo-tb-head">Date/Heure<br />(<abbr title="Easter Daylight Time">HAE</abbr>)</th>
+        <th id="header1" class="wxo-tb-head">Date/Heure<br />(<abbr>HAE</abbr>)</th>
         <th id="header2" class="wxo-tb-head">
           <abbr title="Temperature">Temp.</abbr>
           <br />(<abbr title="degrees Celsius">&deg;C</abbr>)</th>
@@ -214,7 +214,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <th class="wxo-th-bkg" colspan="6">05 septembre 2017</th>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">16:30</td>
+        <td headers="header1" class="text-center">16:00</td>
         <td headers="header2" class="text-center">21</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/01.png" alt="Généralement ensoleillé" /></span><div class="media-body">
             <p>Généralement ensoleillé</p>
@@ -229,7 +229,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">17:30</td>
+        <td headers="header1" class="text-center">17:00</td>
         <td headers="header2" class="text-center">21</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/01.png" alt="Généralement ensoleillé" /></span><div class="media-body">
             <p>Généralement ensoleillé</p>
@@ -244,7 +244,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">18:30</td>
+        <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">20</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/01.png" alt="Généralement ensoleillé" /></span><div class="media-body">
             <p>Généralement ensoleillé</p>
@@ -259,7 +259,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">19:30</td>
+        <td headers="header1" class="text-center">19:00</td>
         <td headers="header2" class="text-center">19</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -274,7 +274,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">20:30</td>
+        <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">17</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -289,7 +289,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">21:30</td>
+        <td headers="header1" class="text-center">21:00</td>
         <td headers="header2" class="text-center">16</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -304,7 +304,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">22:30</td>
+        <td headers="header1" class="text-center">22:00</td>
         <td headers="header2" class="text-center">16</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -319,7 +319,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">23:30</td>
+        <td headers="header1" class="text-center">23:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -337,7 +337,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <th class="wxo-th-bkg" colspan="6">06 septembre 2017</th>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">00:30</td>
+        <td headers="header1" class="text-center">00:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -352,7 +352,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">01:30</td>
+        <td headers="header1" class="text-center">01:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -367,7 +367,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">02:30</td>
+        <td headers="header1" class="text-center">02:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -382,7 +382,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">03:30</td>
+        <td headers="header1" class="text-center">03:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -397,7 +397,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">04:30</td>
+        <td headers="header1" class="text-center">04:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="Quelques nuages" /></span><div class="media-body">
             <p>Quelques nuages</p>
@@ -412,7 +412,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">05:30</td>
+        <td headers="header1" class="text-center">05:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partiellement nuageux" /></span><div class="media-body">
             <p>Partiellement nuageux</p>
@@ -427,7 +427,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">06:30</td>
+        <td headers="header1" class="text-center">06:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -442,7 +442,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">07:30</td>
+        <td headers="header1" class="text-center">07:00</td>
         <td headers="header2" class="text-center">16</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -457,7 +457,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">08:30</td>
+        <td headers="header1" class="text-center">08:00</td>
         <td headers="header2" class="text-center">17</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -472,7 +472,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">09:30</td>
+        <td headers="header1" class="text-center">09:00</td>
         <td headers="header2" class="text-center">18</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -487,7 +487,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">10:30</td>
+        <td headers="header1" class="text-center">10:00</td>
         <td headers="header2" class="text-center">19</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -502,7 +502,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">11:30</td>
+        <td headers="header1" class="text-center">11:00</td>
         <td headers="header2" class="text-center">21</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -515,7 +515,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">26</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">12:30</td>
+        <td headers="header1" class="text-center">12:00</td>
         <td headers="header2" class="text-center">22</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -528,7 +528,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">27</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">13:30</td>
+        <td headers="header1" class="text-center">13:00</td>
         <td headers="header2" class="text-center">23</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -541,7 +541,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">28</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">14:30</td>
+        <td headers="header1" class="text-center">14:00</td>
         <td headers="header2" class="text-center">23</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
@@ -554,7 +554,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">27</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">15:30</td>
+        <td headers="header1" class="text-center">15:00</td>
         <td headers="header2" class="text-center">24</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="Alternance de soleil et de nuages" /></span><div class="media-body">
             <p>Alternance de soleil et de nuages</p>
