--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -501,32 +501,32 @@
           <tr>
             <th scope="col">
               <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
-                <strong title="dimanche">Dim</strong>
+                <strong title="dimanche">dim</strong>
                 <br>1 <abbr title="January">jan</abbr>
               </a>
             </th>
             <th scope="col">
-              <strong title="lundi">Lun</strong>
+              <strong title="lundi">lun</strong>
               <br>2 <abbr title="January">jan</abbr>
             </th>
             <th scope="col">
-              <strong title="mardi">Mar</strong>
+              <strong title="mardi">mar</strong>
               <br>3 <abbr title="January">jan</abbr>
             </th>
             <th scope="col">
-              <strong title="mercredi">Mer</strong>
+              <strong title="mercredi">mer</strong>
               <br>4 <abbr title="January">jan</abbr>
             </th>
             <th scope="col">
-              <strong title="jeudi">Jeu</strong>
+              <strong title="jeudi">jeu</strong>
               <br>5 <abbr title="January">jan</abbr>
             </th>
             <th scope="col">
-              <strong title="vendredi">Ven</strong>
+              <strong title="vendredi">ven</strong>
               <br>6 <abbr title="January">Jan</abbr>
             </th>
             <th scope="col">
-              <strong title="samedi">Sam</strong>
+              <strong title="samedi">sam</strong>
               <br>7 <abbr title="January">Jan</abbr>
             </th>
           </tr>
