lowercase day names

--- a/scenarioAfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioAfr/weather/city/pages/on-118_metric_e.html
@@ -504,7 +504,7 @@
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
               <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
-                <strong title="mardi">Mar</strong>
+                <strong title="mardi">mar</strong>
                 <br>5 <abbr title="September">sep</abbr>
               </a>
             </div>
@@ -526,7 +526,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="mercredi">Mer</strong>
+              <strong title="mercredi">mer</strong>
               <br>6 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/02.gif" alt="Alternance de soleil et de nuages" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
@@ -547,7 +547,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="jeudi">Jeu</strong>
+              <strong title="jeudi">jeu</strong>
               <br>7 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Possibilité d'averses" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
@@ -572,7 +572,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="vendredi">Ven</strong>
+              <strong title="vendredi">ven</strong>
               <br>8 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Possibilité d'averses" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
@@ -597,7 +597,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="samedi">Sam</strong>
+              <strong title="samedi">sam</strong>
               <br>9 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Possibilité d'averses" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
@@ -622,7 +622,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="dimanche">Dim</strong>
+              <strong title="dimanche">dim</strong>
               <br>10 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Pluie" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">16&deg;<abbr title="Celsius">C</abbr>
@@ -643,7 +643,7 @@
           </div>
           <div class="div-column">
             <div class="div-row div-row1 div-row-head">
-              <strong title="lundi">Lun</strong>
+              <strong title="lundi">lun</strong>
               <br>11 <abbr title="September">sep</abbr>
             </div>
             <div class="div-row div-row2 div-row-data"><img width="60" height="51" src="../../../weather/weathericons/12.gif" alt="Pluie" class="center-block"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">15&deg;<abbr title="Celsius">C</abbr>
