--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -696,7 +696,7 @@
                       <abbr title="lundi">Lun</abbr>, 2 <abbr title="January">jan</abbr>
                     </strong>
                   </td>
-                  <td>Généralement nuageux. Neige intermittente.</td>
+                  <td>Généralement nuageux. Neige intermittente. Maximum moins 2.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="lundi soir"> Nuit</td>
