--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -663,13 +663,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <strong title="jeudi">Aujourd'hui</strong>
                     </a>
                   </td>
-                  <td>Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'orages violents. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Humidex 25. Indice UV de 3 ou modéré.</td>  
+                  <td>Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'orages violents. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Indice UV de 3 ou modéré.</td>  
                 </tr>
                 <tr class="pdg-tp-0">
                   <td>
                     <strong title="jeudi soir">Ce soir et cette nuit</strong>
                   </td>
-                  <td>Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'orages violents. Vents du sud-ouest de 20 km/h devenant légers ce soir.  Minimum 12.</td>
+                  <td>Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'orages violents. Vents du sud-ouest de 20 km/h devenant légers ce soir.  Minimum 10.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
