--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -777,7 +777,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'orages violents. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Humidex 25.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'orages violents. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/39.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
