--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -795,7 +795,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
             <div class="col-xs-6">
               <strong>
-                <abbr title="ven">ven</abbr>, 25 <abbr title="August">aoû</abbr>
+                <abbr title="ven">Ven</abbr>, 25 <abbr title="August">aoû</abbr>
               </strong>
               <br><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">73&deg;<abbr title="Fahrenheit">F</abbr>
@@ -813,7 +813,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
             <div class="col-xs-6">
               <strong>
-                 <abbr title="Saturday">sam</abbr>, 26 <abbr title="August">aoû</abbr>
+                 <abbr title="Saturday">Sam</abbr>, 26 <abbr title="August">aoû</abbr>
               </strong>
               <br><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">75&deg;<abbr title="Fahrenheit">F</abbr>
@@ -831,7 +831,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
             <div class="col-xs-6">
               <strong>
-               <abbr title="Sunday">dim</abbr>, 27 <abbr title="August">aoû</abbr>
+               <abbr title="Sunday">Dim</abbr>, 27 <abbr title="August">aoû</abbr>
               </strong>
               <br><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">64&deg;<abbr title="Fahrenheit">F</abbr>
@@ -849,7 +849,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/02.gif" alt="Alternance de soleil et de nuages" class="pull-right" title="Alternance de soleil et de nuages"></div>
             <div class="col-xs-6">
               <strong>
-                 <abbr title="Monday">lun</abbr>, 28 <abbr title="August">aoû</abbr>
+                 <abbr title="Monday">Lun</abbr>, 28 <abbr title="August">aoû</abbr>
               </strong>
               <br><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">70&deg;<abbr title="Fahrenheit">F</abbr>
@@ -867,7 +867,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/00.gif" alt="Ensoleillé" class="pull-right" title="Ensoleillé"></div>
             <div class="col-xs-6">
               <strong>
-                 <abbr title="Tuesday">mar</abbr>, 29 <abbr title="August">aoû</abbr>
+                 <abbr title="Tuesday">Mar</abbr>, 29 <abbr title="August">aoû</abbr>
               </strong>
               <br><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">81&deg;<abbr title="Fahrenheit">F</abbr>
@@ -885,7 +885,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
             <div class="col-xs-6">
               <strong>
-                 <abbr title="Wednesday">mer</abbr>, 30 <abbr title="August">aoû</abbr>
+                 <abbr title="Wednesday">Mer</abbr>, 30 <abbr title="August">aoû</abbr>
               </strong>
               <br><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">79&deg;<abbr title="Fahrenheit">F</abbr>
